@@ -528,3 +528,36 @@ g_strdelimit (gchar *string, const gchar *delimiters, gchar new_delimiter)
 	return string;
 }
 
+#ifndef HAVE_STRLCPY
+gsize 
+g_strlcpy (gchar *dest, const gchar *src, gsize dest_size)
+{
+	gchar *d;
+	const gchar *s;
+	gchar c;
+	gsize len;
+	
+	g_return_val_if_fail (src != NULL, 0);
+	g_return_val_if_fail (dest != NULL, 0);
+
+	len = dest_size;
+	if (len == 0)
+		return 0;
+
+	s = src;
+	d = dest;
+	while (--len) {
+		c = *s++;
+		*d++ = c;
+		if (c == '\0')
+			return (dest_size - len - 1);
+	}
+
+	/* len is 0 i we get here */
+	*d = '\0';
+	/* we need to return the length of src here */
+	while (*s++) ; /* instead of a plain strlen, we use 's' */
+	return s - src - 1;
+}
+#endif
+
